# pydxf

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  dwg2shp.py  dxf2geojson.py  dxf2shp.py  main.py  pydwg.py  pydxf.py  pyproject.toml  readme.md  requirements.txt
WO_1901_015/: KHT00219_P1.bak  KHT00219_P1.dwg  KHT00219_P1.dxf
WO_1901_015/WO_1901_015_CDS/: CONTPRM2.WO_1901_015  DET_WO_1901_015.bak  DET_WO_1901_015.dwg  LAYERS.WO_1901_015  WO_1901_015 AuditTrail.rtf  WO_1901_015.SPL  WO_1901_015.cls  WO_1901_015.mde  WO_1901_015.pcp1  WO_1901_015.rdp  WO_1901_015.str  data_160119.bak  data_160119.dwg  db.WO_1901_015
WO_1901_015/WO_1901_015_RAW/: 190116_KHT00219_ADI_TS
WO_1901_015/WO_1901_015_reference/: LAMA.dwg
app/common/: __init__.py  data_dirs.py
app/features/: dwg2dxf.py  dwg2gpkg.py  dwg2shp.py  dxf2geojson.py  dxf2gpkg.py  dxf2shp.py
app/oriScripts/: dwg2dxf.py  dwg2shp.py  dxf2geojson.py  dxf2shp.py  dxf2shp2.py
app/pydxf/: dxf2shp.py
app/routes/: geojson.py  geopackage.py  shapefiles.py  upload.py
sample/WO_1901_015_CDS/: CONTDATA.WO_1901_015  WO_1901_015.JOB  db.lastsaveddatabase  stad1.WO_1901_015  stadiaerrors_WO_1901_015.rtf  ~$adiaerrors_WO_1901_015.rtf
setup/: qcadcam-3.32.6-trial-linux-qt5.14-x86_64.run
